--- a/package.json
+++ b/package.json
@@ -1,51 +1,51 @@
 {
-  "name": "secure-enclave",
-  "version": "0.1.0",
-  "description": "My new module",
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
-  "scripts": {
-    "build": "expo-module build",
-    "clean": "expo-module clean",
-    "test": "expo-module test",
-    "prepare": "expo-module prepare",
-    "prepublishOnly": "expo-module prepublishOnly",
-    "expo-module": "expo-module",
-    "open:ios": "open -a \"Xcode\" example/ios",
-    "open:android": "open -a \"Android Studio\" example/android",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "lint-check": "eslint \"./**/*.ts\""
-  },
-  "keywords": [
-    "react-native",
-    "expo",
-    "secure-enclave",
-    "SecureEnclave"
-  ],
-  "repository": "https://github.com/clave/secure-enclave-module",
-  "bugs": {
-    "url": "https://github.com/clave/secure-enclave-module/issues"
-  },
-  "author": "zetsuboii <hmzkrb@gmail.com> (https://github.com/zetsuboii)",
-  "license": "MIT",
-  "homepage": "https://github.com/clave/secure-enclave-module#readme",
-  "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
-    "@types/react": "^18.0.25",
-    "@types/react-native": "^0.70.6",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "expo-module-scripts": "^3.0.4",
-    "expo-modules-core": "^1.1.0",
-    "prettier": "^2.3.2"
-  },
-  "peerDependencies": {
-    "expo": "*",
-    "react": "*",
-    "react-native": "*"
-  }
+    "name": "react-native-sem",
+    "version": "0.2.1",
+    "description": "My new module",
+    "main": "build/index.js",
+    "types": "build/index.d.ts",
+    "scripts": {
+        "build": "expo-module build",
+        "clean": "expo-module clean",
+        "test": "expo-module test",
+        "prepare": "expo-module prepare",
+        "prepublishOnly": "expo-module prepublishOnly",
+        "expo-module": "expo-module",
+        "open:ios": "open -a \"Xcode\" example/ios",
+        "open:android": "open -a \"Android Studio\" example/android",
+        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+        "lint-check": "eslint \"./**/*.ts\""
+    },
+    "keywords": [
+        "react-native",
+        "expo",
+        "secure-enclave",
+        "SecureEnclave"
+    ],
+    "repository": "https://github.com/clave/secure-enclave-module",
+    "bugs": {
+        "url": "https://github.com/clave/secure-enclave-module/issues"
+    },
+    "author": "zetsuboii <hmzkrb@gmail.com> (https://github.com/zetsuboii)",
+    "license": "MIT",
+    "homepage": "https://github.com/clave/secure-enclave-module#readme",
+    "devDependencies": {
+        "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+        "@types/react": "^18.0.25",
+        "@types/react-native": "^0.70.6",
+        "@typescript-eslint/eslint-plugin": "^5.0.0",
+        "@typescript-eslint/parser": "^5.0.0",
+        "eslint": "^8.0.1",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "expo-module-scripts": "^3.0.4",
+        "expo-modules-core": "^1.1.0",
+        "prettier": "^2.3.2"
+    },
+    "peerDependencies": {
+        "expo": "*",
+        "react": "*",
+        "react-native": "*"
+    }
 }
